Prima versione semplificata

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 configmgr/environment.ini
 configmgr/db.sqlite3
 *.pyc
+configmgr/*/migrations/*
+configmgr/*/cache/*
+configmgr/templates/scrap.html
